tests/fixtures/invalid/int_bitand_str.py
# Cannot bitwise AND Int and Str
x: int = 1 & "hello"
